<resources>
    <string name="app_name">Farmer App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_my_orders">My Orders</string>
    <string name="action_wishList">Wish List</string>
    <string name="action_my_store">My Store</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_customer_care">Customer Care</string>
    <string name="menu_frequently_bought">Frequently Bought</string>
    <string name="menu_my_store">My Store</string>
    <string name="menu_faq">FAQ?</string>
    <string name="menu_manage_address">Manage Address</string>
    <string name="menu_payment_option">Payment Option</string>
    <string name="menu_refer_and_earn">Refer And Earn</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="my_account">My Account</string>
    <string name="user_name">User Name</string>
    <string name="user_email_id">Email ID</string>
</resources>
