<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_account"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_categories"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_manage_address"
            android:title="@string/menu_manage_address" />
        <item
            android:id="@+id/nav_frequently_bought"
            android:title="@string/menu_frequently_bought" />
<!--        <item-->
<!--            android:id="@+id/my_store"-->
<!--            android:title="@string/menu_my_store" />-->
        <item
            android:id="@+id/nav_payment_option"
            android:title="@string/menu_payment_option" />
        <item
            android:id="@+id/nav_refer_and_earn"
            android:title="@string/menu_refer_and_earn" />
        <item
            android:id="@+id/nav_customer_care"
            android:title="@string/menu_customer_care" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->
</menu>
